--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dayjs": "^1.11.10",
     "hls.js": "^1.4.12",
+    "ios-pwa-splash": "^1.0.0",
     "vue": "^3.3.8"
   },
   "devDependencies": {
