--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,6 +38,8 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Build
+        env:
+          VITE_BUILD_VERSION: '11'
         run: npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v3
