--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
         run: npm install
       - name: Build
         env:
-          VITE_BUILD_VERSION: '11'
+          VITE_BUILD_VERSION: "${LAST_COMMIT_SHA:0:7}"
         run: npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v3
