--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,9 +38,7 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Build
-        env:
-          VITE_BUILD_VERSION: $GITHUB_RUN_ID
-        run: npm run build
+        run: VITE_BUILD_VERSION=${{ github.sha }} npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
