--- a/package.json
+++ b/package.json
@@ -9,34 +9,30 @@
     "eslint": "eslint --fix",
     "prettier": "prettier --write",
     "preview": "vite preview --host=0.0.0.0",
-    "prepare": "husky install",
+    "prepare": "husky",
     "test": "echo \"Error: no test specified\" && exit 0"
   },
   "dependencies": {
     "@bybas/weather-icons": "^2.0.0",
-    "axios": "^1.6.1",
-    "dayjs": "^1.11.10",
-    "hls.js": "^1.4.12",
+    "axios": "^1.6.8",
+    "dayjs": "^1.11.11",
+    "hls.js": "^1.5.8",
     "ios-pwa-splash": "^1.0.0",
-    "moment": "^2.29.4",
-    "query-string": "^8.1.0",
-    "vue": "^3.3.8"
+    "moment": "^2.30.1",
+    "query-string": "^9.0.0",
+    "vue": "^3.4.26"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.4.1",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.53.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-vue": "^9.18.1",
-    "husky": "^8.0.0",
-    "lint-staged": "^15.1.0",
-    "postcss": "^8.4.31",
-    "prettier": "^3.1.0",
-    "tailwindcss": "^3.3.5",
-    "vite": "^4.5.0",
-    "vite-plugin-mkcert": "^1.16.0",
-    "vite-plugin-pwa": "^0.16.7"
+    "@vitejs/plugin-vue": "^5.0.4",
+    "autoprefixer": "^10.4.19",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.3",
+    "vite": "^5.2.10",
+    "vite-plugin-mkcert": "^1.17.5",
+    "vite-plugin-pwa": "^0.20.0"
   },
   "lint-staged": {
     "*.{js,vue}": [
