--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --host=0.0.0.0",
     "build": "vite build",
     "eslint": "eslint --fix",
-    "prettier": "prettier --write",
+    "format": "prettier --write src/",
     "preview": "vite preview --host=0.0.0.0",
     "prepare": "husky",
     "test": "echo \"Error: no test specified\" && exit 0"
